# qt_opengl_hello_world

./: CMakeLists.txt  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
